# aws-cdk-serverless-graphql-rs

./: .eslintignore  .gitignore  Cargo.toml  README.md  musl-build  package.json  package.sh  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  schema.graphql
infra/: cdk.json  package-lock.json  package.json
infra/lib/: service-stack.ts
scripts/: build_service.sh  config.sh  update_apollo_studio.sh
service/src/: config.rs  domain.rs  error.rs  lib.rs  main.rs  model.rs  schema.rs  utils.rs
service/src/entrypoints/: graphql.rs
service/src/graphql/: mod.rs  schema.rs
service/src/graphql/resolvers/: mutation.rs  query.rs
service/src/models/: customer.rs  mod.rs
service/src/store/: mod.rs
service/src/store/dynamodb/: ext.rs  mod.rs
